fix pic not showing via netlify

--- a/gaproject2/src/Components/Character/Character.css
+++ b/gaproject2/src/Components/Character/Character.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&display=swap");
 .personCard {
-  background-image: url("./owl.png");
+  background-image: url("https://res.cloudinary.com/headincloud/image/upload/v1595635096/owl_e41ior.png");
   opacity: 78%;
   background-size: cover;
   background-position: center;
