--- a/gaproject2/src/Components/House/House.css
+++ b/gaproject2/src/Components/House/House.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&display=swap");
 
 .houseCard {
-  background-image: url("./hat.png");
+  background-image: url("https://res.cloudinary.com/headincloud/image/upload/v1595635015/hat_xkpxnz.png");
   opacity: 78%;
   background-size: cover;
   background-position: center;
